# sel_uri

./: .gitignore  CMakeLists.txt  README.md  generate.cmake
.github/workflows/: ci.yml
cmake/: get_doctest.cmake
cmake/generators/: re2c.cmake
include/sel/: uri.hpp  uri_fwd.hpp
source/: uri.re  uri.re.cpp
test/: uri_tests.cpp
